--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -160,6 +160,8 @@
 
 	<div th:fragment="search-users" class="user-search-div">
 
+		<audio id="audio" style="display: none;"></audio>
+
 		<div th:if="${#lists.isEmpty(users)}"
 			style="width: 100%; height: 100%; display: flex; align-items: center; justify-content: center; padding-top: 12px;">
 			<span th:text="#{no-users-found}"></span>
@@ -218,8 +220,12 @@
 										style="display: inline-block;">
 										<div class="left">
 											<button class="button colored is-rounded is-info"
-												th:onclick="viewProfile([[${user.idEncoded}]]);">
+												th:onclick="viewProfile([[${user.idEncoded}]]);" style="margin-right: 4px;">
 												<i class="fa fa-user"></i>
+											</button>
+											<button class="button colored is-rounded is-info search-audio"
+												th:onclick="playPauseAudio([[${user.idEncoded}]]);">
+												<i class="fa fa-headphones"></i>
 											</button>
 										</div>
 										<div class="right">
