--- a/src/main/resources/static/css/alovoa.css
+++ b/src/main/resources/static/css/alovoa.css
@@ -205,7 +205,7 @@ input[type=range].slider {
 }
 
 #nav-search {
-	background-color: #ec407a;
+	background-color: #ec417a;
 }
 #nav-donate {
 	background-color: #f4511e;
@@ -219,10 +219,12 @@ input[type=range].slider {
 #nav-profile {
 	background-color: #00897b;
 }
+/*
 .switch[type=checkbox]:checked+label::before,
 .switch[type=checkbox]:checked+label:before {
- background:#ec407a
+ background:#ec417a
 }
+*/
 
 .datetimepicker-dummy-input {
 	min-width: 232px;
