--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -10,6 +10,7 @@
 	<link rel="manifest" href="/manifest/manifest.json">
 
 	<link rel="stylesheet" href="/css/lib/bulma.min.css" />
+	<th:block th:replace="fragments.html::bulma"></th:block>
 	<link rel="stylesheet" href="/css/lib/bulma-switch.min.css" />
 	<link rel="stylesheet" href="/css/lib/bulma-slider.min.css" />
 	<link rel="stylesheet" href="/css/lib/swiper.min.css" />
@@ -215,6 +216,18 @@
 					</div>
 					<div class="notification is-info"
 						th:text="#{profile.interest.info}"></div>
+				</div>
+				
+				<div class="box">
+					<div class="field" th:fragment="interests">
+						<label class="label">Accent Color</label>
+						<div>
+							<button class="button" style="width: 40px; background-color: #ec407a" onclick="updateAccentColor('pink')"></button>
+							<button class="button" style="width: 40px; background-color: #ab47bd" onclick="updateAccentColor('purple')"></button>
+							<button class="button" style="width: 40px; background-color: #43a4f4" onclick="updateAccentColor('blue')"></button>
+							<button class="button" style="width: 40px; background-color: #ffa724" onclick="updateAccentColor('orange')"></button>
+						</div>
+					</div>
 				</div>
 
 				<div class="box">
