Set accent color on every page when available.

--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -9,6 +9,7 @@
 <link rel="manifest" href="/manifest/manifest.json">
 
 <link rel="stylesheet" href="/css/lib/bulma.min.css" />
+<th:block th:replace="fragments.html::bulma"></th:block>
 <link rel="stylesheet" href="/css/alovoa.css" />
 <link rel="stylesheet" href="/css/privacy.css" />
 <title th:text="#{admin.title}"></title>
