--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -11,6 +11,7 @@
 <link rel="apple-touch-icon" href="/img/android-chrome-192x192.png">
 
 <link rel="stylesheet" href="/css/lib/bulma.min.css" />
+<th:block th:replace="fragments.html::bulma"></th:block>
 <link rel="stylesheet" href="/css/alovoa.css" />
 <link rel="stylesheet" href="/css/index.css" />
 
