--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -220,7 +220,7 @@
 				
 				<div class="box">
 					<div class="field" th:fragment="interests">
-						<label class="label">Accent Color</label>
+						<label class="label" th:text="#{accent-color}"></label>
 						<div>
 							<button class="button" style="width: 40px; background-color: #ec407a" onclick="updateAccentColor('pink')"></button>
 							<button class="button" style="width: 40px; background-color: #ab47bd" onclick="updateAccentColor('purple')"></button>
