--- a/src/main/resources/templates/donate-list.html
+++ b/src/main/resources/templates/donate-list.html
@@ -9,6 +9,7 @@
 <link rel="manifest" href="/manifest/manifest.json">
 
 <link rel="stylesheet" href="/css/lib/bulma.min.css" />
+<th:block th:replace="fragments.html::bulma"></th:block>
 <link rel="stylesheet" href="/css/alovoa.css" />
 <link rel="stylesheet" href="/css/donate-list.css" />
 <title th:text="#{donate.title}"></title>
