--- a/src/main/resources/templates/notification.html
+++ b/src/main/resources/templates/notification.html
@@ -9,6 +9,7 @@
 <link rel="manifest" href="/manifest/manifest.json">
 
 <link rel="stylesheet" href="/css/lib/bulma.min.css" />
+<th:block th:replace="fragments.html::bulma"></th:block>
 <link rel="stylesheet" href="/css/lib/bulma-slider.min.css" />
 <link rel="stylesheet" href="/css/lib/css-loaders.css" />
 <link rel="stylesheet" href="/css/alovoa.css" />
