--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -7,7 +7,9 @@
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-title" content="Alovoa">
 <link rel="manifest" href="/manifest/manifest.json">
+
 <link rel="stylesheet" href="/css/lib/bulma.min.css" />
+<th:block th:replace="fragments.html::bulma"></th:block>
 <link rel="stylesheet" href="/css/lib/bulma-switch.min.css" />
 <link rel="stylesheet" href="/css/lib/bulma-calendar.min.css" />
 <link rel="stylesheet" href="/css/alovoa.css" />
