--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -13,6 +13,7 @@
 	<th:block th:replace="fragments.html::bulma"></th:block>
 	<link rel="stylesheet" href="/css/lib/bulma-switch.min.css" />
 	<link rel="stylesheet" href="/css/lib/bulma-slider.min.css" />
+	<link rel="stylesheet" href="/css/lib/bulma-collapsible.min.css" />
 	<link rel="stylesheet" href="/css/lib/swiper.min.css" />
 	<link rel="stylesheet" href="/css/lib/css-loaders.css" />
 	<link rel="stylesheet" href="/css/alovoa.css" />
@@ -110,32 +111,6 @@
 						</div>
 					</div>
 
-					<div class="field">
-						<div class="columns">
-							<div class="column">
-								<label class="label" th:text="#{profile.min-age}"></label>
-								<div class="slider-container">
-									<input class="slider has-output" step="1" min="16" max="99"
-										th:value="${user.preferedMinAge}" type="range"
-										id="min-age-slider" style="margin-right: 8px;">
-									<output for="min-age-slider" id="min-age-slider-output"
-										th:text="${user.preferedMinAge}"></output>
-								</div>
-							</div>
-							<div class="column">
-								<label class="label" th:text="#{profile.max-age}"></label>
-								<div class="slider-container">
-									<input class="slider has-output" step="1" min="16" max="99"
-										th:value="${user.preferedMaxAge}" type="range"
-										id="max-age-slider" style="margin-right: 8px;">
-									<output for="max-age-slider" id="max-age-slider-output"
-										th:text="${user.preferedMaxAge}"></output>
-								</div>
-							</div>
-						</div>
-					</div>
-
-
 					<div class="field"  id="gender-field">
 						<label class="label" th:text="#{profile.gender}"></label>
 						<th:block th:each="gender : ${genders}">
@@ -155,6 +130,46 @@
 									th:text="#{profile.gender.other}"></label>
 							</div>
 						</th:block>
+					</div>
+				</div>
+				
+				<div style="margin-bottom: 1.5rem;">
+					<div class="card">
+						<header class="card-header">
+							<a href="#collapsible-card" data-action="collapse" class="card-header-icon is-hidden-fullscreen full-width" 
+							aria-label="more options" style="padding: 1.25rem; display: flex; justify-content: space-between;">
+								<span class="label" style="margin-bottom: initial;">
+									Prefered age range
+								</span>
+									<div class="navbar-link"></div>
+							</a>
+						</header>
+						<div id="collapsible-card" class="is-collapsible">
+							<div class="card-content">
+								<div class="columns">
+									<div class="column">
+										<label class="label" th:text="#{profile.min-age}"></label>
+										<div class="slider-container">
+											<input class="slider has-output" step="1" min="16" max="99"
+												th:value="${user.preferedMinAge}" type="range"
+												id="min-age-slider" style="margin-right: 8px;">
+											<output for="min-age-slider" id="min-age-slider-output"
+												th:text="${user.preferedMinAge}"></output>
+										</div>
+									</div>
+									<div class="column">
+										<label class="label" th:text="#{profile.max-age}"></label>
+										<div class="slider-container">
+											<input class="slider has-output" step="1" min="16" max="99"
+												th:value="${user.preferedMaxAge}" type="range"
+												id="max-age-slider" style="margin-right: 8px;">
+											<output for="max-age-slider" id="max-age-slider-output"
+												th:text="${user.preferedMaxAge}"></output>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
 					</div>
 				</div>
 
@@ -283,6 +298,7 @@
 	<script src="/js/lib/fontawesome.all.js"></script>
 	<script src="/js/lib/jquery.min.js"></script>
 	<script src="/js/lib/bulma-slider.min.js"></script>
+	<script src="/js/lib/bulma-collapsible.min.js"></script>
 	<script src="/js/lib/swiper.min.js"></script>
 	<script src="/js/lib/notification.js"></script>
 	<script src="/js/tools/getNotification.js"></script>
