Hide collapsible age sliders on desktop

--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -135,7 +135,7 @@
 				
 				<div style="margin-bottom: 1.5rem;">
 					<div class="card">
-						<header class="card-header">
+						<header class="card-header collapsible-header">
 							<a href="#collapsible-card" data-action="collapse" class="card-header-icon is-hidden-fullscreen full-width" 
 							aria-label="more options" style="padding: 1.25rem; display: flex; justify-content: space-between;">
 								<span class="label" style="margin-bottom: initial;">
