--- a/src/main/resources/static/css/profile.css
+++ b/src/main/resources/static/css/profile.css
@@ -20,3 +20,12 @@
 		padding: 0.5rem 1rem;
 	}
 }
+
+@media screen and (min-width: 1024px) {
+	.is-collapsible {
+		height: initial !important;
+	}
+	.collapsible-header {
+		display: none;
+	}
+}
