Updated translation for preferred age range

--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -138,10 +138,8 @@
 						<header class="card-header collapsible-header">
 							<a href="#collapsible-card" data-action="collapse" class="card-header-icon is-hidden-fullscreen full-width" 
 							aria-label="more options" style="padding: 1.25rem; display: flex; justify-content: space-between;">
-								<span class="label" style="margin-bottom: initial;">
-									Prefered age range
-								</span>
-									<div class="navbar-link"></div>
+								<span class="label" style="margin-bottom: initial;" th:text="#{profile.pref-age-range}"></span>
+								<div class="navbar-link"></div>
 							</a>
 						</header>
 						<div id="collapsible-card" class="is-collapsible">
