--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -26,7 +26,7 @@
 		<header th:insert="fragments.html::header-logged-in"></header>
 		<div class="section">
 			<div class="container">
-				<div class="field">
+				<div class="field" style="margin-top: 6px;">
 					<div id="profile-warning"></div>
 				</div>
 
