--- a/src/main/resources/static/css/lib/pulse-button.css
+++ b/src/main/resources/static/css/lib/pulse-button.css
@@ -7,17 +7,12 @@ MIT License
 	width: 200px;
 	height: 200px;
 	margin: 0 auto 0;
-	-webkit-perspective: 1000;
-	-webkit-backface-visibility: hidden;
-	/*background: #fff;*/
+	perspective: 1000;
+	backface-visibility: hidden;
 }
 
 .pulse-button {
-	 box-shadow: 0 0 0 0 rgba(189, 189, 189, 0.3);
-
-	 -webkit-animation: pulse 1.25s infinite cubic-bezier(0.66, 0, 0, 0.5);
-	 -moz-animation: pulse 1.25s infinite cubic-bezier(0.66, 0, 0, 0.5);
-	 -ms-animation: pulse 1.25s infinite cubic-bezier(0.66, 0, 0, 0.5);
+	 box-shadow: 0 0 0 0 rgba(128, 128, 128, 0.5);
 	 animation: pulse 1.25s infinite cubic-bezier(0.66, 0, 0, 0.5);
 }
 .pulse-button:hover 
@@ -25,7 +20,4 @@ MIT License
 	 -webkit-animation: none;-moz-animation: none;-ms-animation: none;animation: none;
 }
 
-@-webkit-keyframes pulse {to {box-shadow: 0 0 0 32px;}}
-@-moz-keyframes pulse {to {box-shadow: 0 0 0 32px;}}
-@-ms-keyframes pulse {to {box-shadow: 0 0 0 32px;}}
-@keyframes pulse {to {box-shadow: 0 0 0 32px;}}
+@keyframes pulse {to {box-shadow: 0 0 0 32px rgba(128, 128, 128, 0.1);}}
