Async push notifications. Refactoring.

--- a/src/main/resources/templates/message-detail.html
+++ b/src/main/resources/templates/message-detail.html
@@ -12,7 +12,7 @@
 <th:block th:replace="fragments.html::bulma"></th:block>
 <link rel="stylesheet" href="/css/lib/bulma-slider.min.css" />
 <link rel="stylesheet" href="/css/alovoa.css" />
-<link rel="stylesheet" href="/css/messageDetail.css" />
+<link rel="stylesheet" href="/css/message-detail.css" />
 <title th:text="#{message.title}"></title>
 </head>
 <body>
@@ -50,6 +50,6 @@
 	<script src="/js/lib/jquery.min.js"></script>
 	<script src="/js/tools/getNotification.js"></script>
 	<script src="/js/tools/getText.js"></script>
-	<script src="/js/messageDetail.js"></script>
+	<script src="/js/message-detail.js"></script>
 </body>
 </html>
