Use webp format for search background image, much smaller size!

--- a/src/main/resources/static/css/search.css
+++ b/src/main/resources/static/css/search.css
@@ -1,5 +1,5 @@
 #main-logged-in {
-	background-image: url(/img/search-cover.svg);
+	background-image: url(/img/search-cover.webp);
 }
 
 .image img {
