--- a/src/main/resources/templates/userProfile.html
+++ b/src/main/resources/templates/userProfile.html
@@ -11,10 +11,10 @@
 
 <link rel="stylesheet" href="/css/lib/bulma.min.css" />
 <th:block th:replace="fragments.html::bulma"></th:block>
+<th:block th:replace="fragments.html::ui-design"></th:block>
 <link rel="stylesheet" href="/css/lib/bulma-slider.min.css" />
 <link rel="stylesheet" href="/css/lib/swiper.min.css" />
 <link rel="stylesheet" href="/css/alovoa.css" />
-<link rel="stylesheet" href="/css/search.css" />
 <link rel="stylesheet" href="/css/userProfile.css" />
 <title th:value="${user.firstName}"></title>
 </head>
