--- a/src/main/resources/templates/imprint.html
+++ b/src/main/resources/templates/imprint.html
@@ -10,6 +10,7 @@
 
 <link rel="stylesheet" href="/css/lib/bulma.min.css" />
 <th:block th:replace="fragments.html::bulma"></th:block>
+<th:block th:replace="fragments.html::ui-design"></th:block>
 <link rel="stylesheet" href="/css/alovoa.css" />
 <title th:text="#{imprint.title}"></title>
 </head>
