--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -12,6 +12,7 @@
 
 <link rel="stylesheet" href="/css/lib/bulma.min.css" />
 <th:block th:replace="fragments.html::bulma"></th:block>
+<th:block th:replace="fragments.html::ui-design"></th:block>
 <link rel="stylesheet" href="/css/alovoa.css" />
 <link rel="stylesheet" href="/css/index.css" />
 
