--- a/src/main/resources/templates/message-detail.html
+++ b/src/main/resources/templates/message-detail.html
@@ -10,6 +10,7 @@
 
 <link rel="stylesheet" href="/css/lib/bulma.min.css" />
 <th:block th:replace="fragments.html::bulma"></th:block>
+<th:block th:replace="fragments.html::ui-design"></th:block>
 <link rel="stylesheet" href="/css/lib/bulma-slider.min.css" />
 <link rel="stylesheet" href="/css/alovoa.css" />
 <link rel="stylesheet" href="/css/message-detail.css" />
