--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -11,6 +11,7 @@
 
 	<link rel="stylesheet" href="/css/lib/bulma.min.css" />
 	<th:block th:replace="fragments.html::bulma"></th:block>
+	<th:block th:replace="fragments.html::ui-design"></th:block>
 	<link rel="stylesheet" href="/css/lib/bulma-switch.min.css" />
 	<link rel="stylesheet" href="/css/lib/bulma-slider.min.css" />
 	<link rel="stylesheet" href="/css/lib/bulma-collapsible.min.css" />
@@ -239,6 +240,22 @@
 							<button class="button" style="width: 40px; background-color: #ab47bd" onclick="updateAccentColor('purple')"></button>
 							<button class="button" style="width: 40px; background-color: #43a4f4" onclick="updateAccentColor('blue')"></button>
 							<button class="button" style="width: 40px; background-color: #ffa724" onclick="updateAccentColor('orange')"></button>
+						</div>
+					</div>
+				</div>
+				
+				<div class="box">
+					<div class="field">
+						<label class="label" th:text="#{profile.ui-design}"></label>
+						<div class="select">
+							<select id="ui-design-select" onchange="updateUiDesign()">
+								<option value="round"
+									th:selected="${user.uiDesign == null || user.uiDesign == 'rounded'}"
+									th:text="#{profile.ui-design.rounded}"></option>
+								<option value="angular"
+									th:selected="${user.uiDesign != null && user.uiDesign == 'angular'}"
+									th:text="#{profile.ui-design.angular}"></option>
+							</select>
 						</div>
 					</div>
 				</div>
