More UI improvements

--- a/src/main/resources/static/css/alovoa.css
+++ b/src/main/resources/static/css/alovoa.css
@@ -15,7 +15,6 @@ html {
 * {
 	scrollbar-width: none;
 	font-family: "Montserrat" !important;
-	word-wrap: break-word;
 }
 
 ::-webkit-scrollbar {
@@ -27,6 +26,10 @@ h1, h2, h3, h4, h5, h6 {
 	font-family: "Abril_Fatface" !important;
 }
 */
+
+.description, .chat-message {
+	overflow-wrap: anywhere;
+}
 
 .table {
     background-color: transparent;
