--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -157,41 +157,33 @@
 			</div>
 		</nav>
 	</div>
-	
+
 	<th:block th:fragment="bulma">
 		<th:block th:if="${user != null}">
 			<th:block th:if="${user.accentColor != null}">
-				<link th:if="${user.accentColor == 'purple'}"
-					rel="stylesheet" href="/css/lib/bulma.purple.css">
-				<link th:if="${user.accentColor == 'blue'}" 
-					rel="stylesheet" href="/css/lib/bulma.blue.css">
-				<link th:if="${user.accentColor == 'orange'}" 
-					rel="stylesheet" href="/css/lib/bulma.orange.css">
+				<link th:if="${user.accentColor == 'purple'}" rel="stylesheet" href="/css/lib/bulma.purple.css">
+				<link th:if="${user.accentColor == 'blue'}" rel="stylesheet" href="/css/lib/bulma.blue.css">
+				<link th:if="${user.accentColor == 'orange'}" rel="stylesheet" href="/css/lib/bulma.orange.css">
 			</th:block>
 		</th:block>
 		<th:block th:if="${currUser != null}">
 			<th:block th:if="${currUser.accentColor != null}">
-				<link th:if="${currUser.accentColor == 'purple'}"
-					rel="stylesheet" href="/css/lib/bulma.purple.css">
-				<link th:if="${currUser.accentColor == 'blue'}" 
-					rel="stylesheet" href="/css/lib/bulma.blue.css">
-				<link th:if="${currUser.accentColor == 'orange'}" 
-					rel="stylesheet" href="/css/lib/bulma.orange.css">
+				<link th:if="${currUser.accentColor == 'purple'}" rel="stylesheet" href="/css/lib/bulma.purple.css">
+				<link th:if="${currUser.accentColor == 'blue'}" rel="stylesheet" href="/css/lib/bulma.blue.css">
+				<link th:if="${currUser.accentColor == 'orange'}" rel="stylesheet" href="/css/lib/bulma.orange.css">
 			</th:block>
 		</th:block>
 	</th:block>
-	
+
 	<th:block th:fragment="ui-design">
 		<th:block th:if="${user != null}">
 			<th:block th:if="${user.uiDesign != null}">
-				<link th:if="${user.uiDesign == 'angular'}"
-					rel="stylesheet" href="/css/snips/ui-angular.css">
+				<link th:if="${user.uiDesign == 'angular'}" rel="stylesheet" href="/css/snips/ui-angular.css">
 			</th:block>
 		</th:block>
 		<th:block th:if="${currUser != null}">
 			<th:block th:if="${currUser.uiDesign != null}">
-				<link th:if="${currUser.uiDesign == 'angular'}"
-					rel="stylesheet" href="/css/snips/ui-angular.css">
+				<link th:if="${currUser.uiDesign == 'angular'}" rel="stylesheet" href="/css/snips/ui-angular.css">
 			</th:block>
 		</th:block>
 	</th:block>
@@ -249,7 +241,7 @@
 													</div>
 												</div>
 
-												<div style="font-size: 1.1em; word-break: break-all;"
+												<div style="font-size: 1.1em;"
 													class="description" th:text="${user.description}"></div>
 											</div>
 										</div>
@@ -296,18 +288,14 @@
 			style="display: inline-block; width: 100%;">
 
 			<div th:if="${message.from && message.allowedFormatting}"
-				class="chat-message left" th:utext="${message.content}"
-				style="word-break: break-all;"></div>
+				class="chat-message left" th:utext="${message.content}"></div>
 			<div th:if="${message.from && !message.allowedFormatting}"
-				class="chat-message left" th:text="${message.content}"
-				style="word-break: break-all;"></div>
+				class="chat-message left" th:text="${message.content}"></div>
 
 			<div th:if="${!message.from  && message.allowedFormatting}"
-				class="chat-message right notification is-primary" th:utext="${message.content}"
-				style="word-break: break-all;"></div>
+				class="chat-message right notification is-primary" th:utext="${message.content}"></div>
 			<div th:if="${!message.from  && !message.allowedFormatting}"
-				class="chat-message right notification is-primary" th:text="${message.content}"
-				style="word-break: break-all;"></div>
+				class="chat-message right notification is-primary" th:text="${message.content}"></div>
 
 		</div>
 	</div>
