--- a/src/main/resources/templates/message-detail.html
+++ b/src/main/resources/templates/message-detail.html
@@ -44,6 +44,10 @@
 			</div>
 		</section>
 	</div>
+	
+	<div class="loader-parent">
+		<div class="loader"></div>
+	</div>
 
 	<footer th:replace="fragments.html::navigation"></footer>
 
@@ -51,6 +55,7 @@
 	<script src="/js/lib/jquery.min.js"></script>
 	<script src="/js/tools/getNotification.js"></script>
 	<script src="/js/tools/getText.js"></script>
+	<script src="/js/tools/iframe.js"></script>
 	<script src="/js/message-detail.js"></script>
 </body>
 </html>
