Stop blocked users from getting messages. Increase interval to get new messages. Fix unblock text. Small UI change.

--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -85,7 +85,7 @@
 				<div class="box"  id="description-field">
 					<div class="field">
 						<label class="label" th:text="#{description}"></label>
-						<textarea class="textarea" id="description" style="height: 240px;"
+						<textarea class="textarea" id="description"
 							th:text="${user.description}"></textarea>
 					</div>
 
