--- a/src/main/resources/templates/userProfile.html
+++ b/src/main/resources/templates/userProfile.html
@@ -92,7 +92,7 @@
 						<label class="label" th:text="#{description}"></label>
 						<textarea class="textarea" id="description"
 							th:text="${user.description}"
-							style="word-break: break-all; height: 240px;" readOnly></textarea>
+							style="word-break: break-all;" readOnly></textarea>
 					</div>
 
 					<div class="field" th:if="${user.hasAudio}"
