--- a/src/main/resources/templates/donate-list.html
+++ b/src/main/resources/templates/donate-list.html
@@ -1,52 +1,62 @@
 <!DOCTYPE html>
 <html th:lang="${lang}">
-<head>
-<meta charset="utf-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="apple-mobile-web-app-capable" content="yes">
-<meta name="apple-mobile-web-app-title" content="Alovoa">
-<link rel="manifest" href="/manifest/manifest.json">
 
-<link rel="stylesheet" href="/css/lib/bulma.min.css" />
-<th:block th:replace="fragments.html::bulma"></th:block>
-<th:block th:replace="fragments.html::ui-design"></th:block>
-<link rel="stylesheet" href="/css/alovoa.css" />
-<link rel="stylesheet" href="/css/donate-list.css" />
-<title th:text="#{donate.title}"></title>
+<head>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="apple-mobile-web-app-capable" content="yes">
+	<meta name="apple-mobile-web-app-title" content="Alovoa">
+	<link rel="manifest" href="/manifest/manifest.json">
+
+	<link rel="stylesheet" href="/css/lib/bulma.min.css" />
+	<th:block th:replace="fragments.html::bulma"></th:block>
+	<th:block th:replace="fragments.html::ui-design"></th:block>
+	<link rel="stylesheet" href="/css/alovoa.css" />
+	<link rel="stylesheet" href="/css/donate-list.css" />
+	<title th:text="#{donate.title}"></title>
 </head>
+
 <body>
 	<div id="main">
 		<header th:insert="fragments.html::header"></header>
 		<div class="section">
 			<div class="container">
-			
-				<a href="https://ko-fi.com/alovoa" target="_blank"
-					class="button is-info"
-					style="width: 100%; border-color: #dbdbdb; margin-bottom: 4px;"><i
-					class="fa fa-coins"></i><span th:text="#{kofi}"
-					style="padding-left: 4px;"></span></a>
-				<div class="notification is-success" th:text="#{donate.notice-1}"
-					style="margin-bottom: 4px; font-size: 0.8em;"></div>
-				<div class="notification is-success" style="font-size: 0.8em;"
-					th:text="#{donate.notice-2}"></div>
-					
-				<div style="margin-bottom: 124px;"></div>
-				
-				<div class="notification is-info" style="margin-bottom: 8px;">
-					<span style="word-break: break-all">BTC:
-						bc1q5yejhe5rv0m7j0euxml7klkd2ummw0gc3vx58p</span>
+
+				<div class="box">
+					<a href="https://ko-fi.com/alovoa" target="_blank" class="button is-info"
+						style="width: 100%; border-color: #dbdbdb; margin-bottom: 4px;"><i class="fa fa-coins"></i><span
+							th:text="#{kofi}" style="padding-left: 4px;"></span></a>
+					<div class="notification is-success" th:text="#{donate.notice-1}"
+						style="margin-bottom: 4px; font-size: 0.8em;"></div>
+					<div class="notification is-success" style="font-size: 0.8em;" th:text="#{donate.notice-2}"></div>
 				</div>
+				<div class="box">
+					<a href="https://www.buymeacoffee.com/alovoa" target="_blank" class="button is-info"
+						style="width: 100%; border-color: #dbdbdb; margin-bottom: 4px;"><i class="fa fa-coins"></i><span
+							th:text="#{bmac}" style="padding-left: 4px;"></span></a>
+					<div class="notification is-success" th:text="#{donate.notice-1}"
+						style="margin-bottom: 4px; font-size: 0.8em;"></div>
+					<div class="notification is-success" th:text="#{donate.notice-2}"
+						style="margin-bottom: 4px; font-size: 0.8em;"></div>
+					<div class="notification is-success" style="font-size: 0.8em;" th:text="#{donate.notice-3}"></div>
+				</div>
+				<div class="box">
+					<div class="notification is-info" style="margin-bottom: 8px;">
+						<span style="word-break: break-all">BTC:
+							bc1q5yejhe5rv0m7j0euxml7klkd2ummw0gc3vx58p</span>
+					</div>
 
+				</div>
 			</div>
+
+
 		</div>
+		<footer th:replace="fragments.html::footer"></footer>
 
-
-	</div>
-	<footer th:replace="fragments.html::footer"></footer>
-
-	<script src="/js/tools/getText.js"></script>
-	<script src="/js/lib/fontawesome.all.js"></script>
-	<script src="/js/lib/jquery.min.js"></script>
+		<script src="/js/tools/getText.js"></script>
+		<script src="/js/lib/fontawesome.all.js"></script>
+		<script src="/js/lib/jquery.min.js"></script>
 </body>
+
 </html>
