Add donation amount in user view

--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -80,6 +80,11 @@
 					</div>
 
 				</div>
+				
+				<div class="box" onclick="window.open('/donate-list', '_blank');">
+					<label class="label" th:text="#{donated}"></label>
+					<label th:text=" ${#numbers.formatDecimal(user.totalDonations, 1, 2, 'POINT') + ' €'}"></td>></label>
+				</div>
 
 
 				<div class="box"  id="description-field">
