--- a/src/main/resources/templates/messages.html
+++ b/src/main/resources/templates/messages.html
@@ -51,7 +51,6 @@
 	<div class="loader-parent">
 		<div class="loader"></div>
 	</div>
-	<div th:replace="fragments.html::iframe"></div>
 
 	<footer th:replace="fragments.html::navigation"></footer>
 
@@ -59,7 +58,7 @@
 	<script src="/js/lib/jquery.min.js"></script>
 	<script src="/js/tools/getNotification.js"></script>
 	<script src="/js/tools/getText.js"></script>
-	<script src="/js/tools/iframe.js"></script>
+	<script src="/js/tools/loader.js"></script>
 	<script src="/js/message.js"></script>
 </body>
 
