--- a/src/main/resources/templates/donate.html
+++ b/src/main/resources/templates/donate.html
@@ -43,16 +43,13 @@
 	<div class="loader-parent">
 		<div class="loader"></div>
 	</div>
-
-	<div th:replace="fragments.html::iframe"></div>
-
 	<footer th:replace="fragments.html::navigation"></footer>
 
 	<script src="/js/lib/fontawesome.all.js"></script>
 	<script src="/js/lib/jquery.min.js"></script>
 	<script src="/js/tools/getNotification.js"></script>
 	<script src="/js/tools/getText.js"></script>
-	<script src="/js/tools/iframe.js"></script>
+	<script src="/js/tools/loader.js"></script>
 	<script src="/js/donate.js"></script>
 </body>
 </html>
