--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -323,7 +323,7 @@
 	<script src="/js/lib/notification.js"></script>
 	<script src="/js/tools/getNotification.js"></script>
 	<script src="/js/tools/getText.js"></script>
-	<script src="/js/tools/iframe.js"></script>
+	<script src="/js/tools/loader.js"></script>
 	<script src="/js/profile.js"></script>
 </body>
 </html>
