--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -103,7 +103,6 @@
 	<div class="loader-parent">
 		<div class="loader"></div>
 	</div>
-	<div th:replace="fragments.html::iframe"></div>
 
 	<footer th:replace="fragments.html::navigation"></footer>
 
@@ -113,7 +112,7 @@
 	<script src="/js/lib/bulma-slider.min.js"></script>
 	<script src="/js/tools/getNotification.js"></script>
 	<script src="/js/tools/getText.js"></script>
-	<script src="/js/tools/iframe.js"></script>
+	<script src="/js/tools/loader.js"></script>
 	<script src="/js/search.js"></script>
 </body>
 </html>
