--- a/src/main/resources/templates/message-detail.html
+++ b/src/main/resources/templates/message-detail.html
@@ -33,10 +33,10 @@
 			</div>
 			<div class="section">
 				<div class="container" style="width: 100%; display: flex;" id="message-send-div">
-					<input class="input is-medium is-rounded" type="text"
+					<input class="input is-medium" type="text"
 						id="message-send-input" placeholder="...">
 					<div id="message-send-padding"></div>
-					<button class="button colored is-info is-medium is-rounded"
+					<button class="button colored is-info is-medium"
 						id="message-send-button" onclick="sendMessage()">
 						<i class="fa fa-paper-plane"></i>
 					</button>
