--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -336,6 +336,7 @@
 	<script src="/js/lib/bulma-collapsible.min.js"></script>
 	<script src="/js/lib/swiper.min.js"></script>
 	<script src="/js/lib/notification.js"></script>
+	<script src="/js/lib/cutter.min.js"></script>
 	<script src="/js/tools/getNotification.js"></script>
 	<script src="/js/tools/getText.js"></script>
 	<script src="/js/tools/loader.js"></script>
