Add alert for audio when format is not supported

--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -209,7 +209,7 @@
 							<div class="colored button is-info" id="audio-upload-button">
 								<i class="fa fa-microphone"></i>
 							</div>
-							<input type="file" accept="audio/mp3, audio/wav " id="audio-file"
+							<input type="file" accept="audio/mp3, audio/mpeg, audio/wav, audio/x-wav" id="audio-file"
 								style="display: none">
 							<div style="padding-left: 4px;" th:if="${user.audio}"></div>
 							<div class="colored button is-danger" onclick="deleteAudio()"
